<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, MusicdroidActivity!</string>
    <string name="app_name">Musicdroid</string>
    <string name="load_project">Load Project</string>
    <string name="recordButtonTextField">Record</string>
    <string name="recordInfoTextField">Keine Aufnahme</string>
    <string name="stopRecordButtonTextField">Stop</string>
    <string name="descr">Micro</string>
    <string name="create_new_sound">New</string>
    <string name="load_sound_recorder">Recorder</string>
    <string name="load_piano">Piano</string>
    <string name="load_note_creator">Note Creator</string>
    <string name="load_sound_player">Player</string>
    <string name="new_project">New Project</string>
    <string name="open_soundfile">Open Soundfile</string>
    <string name="rtof_save_file">Save File</string>
    <string name="rtof_next_note">Next note</string>
    <string name="overwrite_dialog">Ungespeicherte Aufnahmen gehen verloren, bist Du sicher, dass du fortsetzen möchtest?</string>
    <string name="ja">Ja</string>
    <string name="nein">Nein</string>
     <string name="record_toast">Aufnahme läuft noch, drücke zuerst Stopp</string>
    <string name="start_text">Play</string>
    <string name="pause_text">Pause</string>
    <string name="resume_text">Resume</string>
    <string name="stop_text">Stop</string>
    <string name="load_sound_file_chooser_text">Please select a Sound</string>
    <string name="record_toast">Aufnahme läuft noch, drücke zuerst Stopp</string>
    <string name="save_dialog">There are unsaved changes. Would you like to save your previous record?</string>
    <string name="playMid">Play</string>
    <string name="open_forum">Forum</string>
    <string name="open_catroid">Catroid</string>
    <string name="singing">Singing</string>
    <string name="catroid_website">http://www.catroid.org</string>
    <string name="catrobat_forum">https://groups.google.com/group/catrobat</string>
    <string name="piano_loading_sounds">Tastentöne werden geladen</string>

</resources>