<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/main_menu_button_background_gradient_start_color"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingTop="10dip"
    android:paddingBottom="10dip" >

    <Button
        android:id="@+id/openRecorderButton"
        style="@style/MainMenuButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.03"
        android:text="@string/load_sound_recorder" />

    <Button
        android:id="@+id/openPianoButton"
        style="@style/MainMenuButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.03"
        android:text="@string/load_piano" />

    <Button
        android:id="@+id/singingButton"
        style="@style/MainMenuButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.03"
        android:text="@string/singing" />

    <Button
        android:id="@+id/openNoteCreator"
        style="@style/MainMenuButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.03"
        android:text="@string/load_note_creator" />

</LinearLayout>