<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal" >

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onPlay"
        android:text="@string/start_text" />

    <Button
        android:id="@+id/pauseResumeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="on_pause_resume"
        android:text="@string/pause_text" />
     <Button
        android:id="@+id/stopButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onStop"
        android:text="@string/stop_text" />



</LinearLayout>