<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dip" >

    <Button
        android:id="@+id/soundRecorderButton"
        android:layout_width="@dimen/mainButtonWidth"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/mainButtonMarginBottom"
        android:text="@string/load_sound_recorder" />

    <Button
        android:id="@+id/soundPlayerButton"
        android:layout_width="@dimen/mainButtonWidth"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/mainButtonMarginBottom"
        android:text="@string/load_sound_player" />

    <Button
        android:id="@+id/newProjectButton"
        android:layout_width="@dimen/mainButtonWidth"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/mainButtonMarginBottom"
        android:text="@string/new_project" />

    <Button
        android:id="@+id/openProjectButton"
        android:layout_width="@dimen/mainButtonWidth"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/mainButtonMarginBottom"
        android:text="@string/open_project" />

</LinearLayout>